<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Profiles</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_profile">NewProfileActivity</string>
    <string name="cat_profile_title">Profile</string>
    <string name="prifle_name_title">Profile Name *</string>
    <string name="profile_name_summary">Name of the profile</string>
    <string name="cat_sound_title">Sounds</string>
    <string name="ring_mode_title">Ring Mode</string>
    <string name="ring_mode_summary">don\'t Change</string>
    <string name="change_ringtone_title">Change Ringtone</string>
    <string name="choose_ringtone_title">Ringtone</string>
    <string name="change_notification_title">Change Notification sound</string>
    <string name="choose_notification_title">Notification Sound</string>
    <string name="cat_device_title">Device</string>
    <string name="change_wifi_title">WiFi</string>
    <string name="change_wifi_summary">Don\'t Change</string>
    <string name="toast_exit_msg">"Press Again To Exit "</string>
    <string name="auto_activation_title">Auto Activation Mode *</string>
    <string name="auto_activation_summary">Not Set</string>
    <string name="ok_string">Ok</string>
    <string name="cancel_string">Cancel</string>
    <string name="time_dialog_to">To ..</string>
    <string name="time_dialog_from">From ..</string>
    <string name="toast_invalid_time_msg">"Invalid time Range "</string>
    <string name="repeating_days_title">Repeating Days *</string>
    <string name="repeating_days_summary">NONE</string>
    <string name="profile_name_intent_extra">PROFILE_NAME</string>
    <string name="ringer_mode_intent_extra">RINGER_MODE</string>
    <string name="ring_tone_intent_extra">RING_TONE</string>
    <string name="noti_tone_intent_extra">NOTI_TONE</string>
    <string name="toast_file_all_msg">Please Fill all mandatory fields</string>
    <string name="change_ring_tone_intent_extra">CHANGE_RINGTONE</string>
    <string name="change_noti_tone_intent_extra">CHANGE_NOTITON</string>
    <string name="activation_mode_intent_extra">ACTIVATION_MODE</string>
    <string name="from_time_intent_extra">FROM_TIME</string>
    <string name="to_time_intent_extra">TO_TIME</string>
    <string name="curr_id_intent_extras">CURR_ID</string>


    <string-array name="repeating_day_entries">
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
    <string-array name="empty"/>
    <string-array name="repeating_day_entries_values">
        <item>7</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="auto_activation_mode_entries">
        <item>Not Set</item>
        <item>By Time</item>
        <item>By Location</item>
    </string-array>

    <string-array name="auto_activation_mode_entries_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="ring_mode_entries">
        <item>Don\'t Change</item>
        <item>Ring and Vibrate</item>
        <item>Vibrate</item>
        <item>Silent</item>
    </string-array>

    <string-array name="ring_mode_entries_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="wifi_entries">
        <item>Don\'t Change</item>
        <item>On</item>
        <item>Off</item>
        <item>Toggle</item>
    </string-array>

    <string-array name="wifi_entries_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="title_activity_map">MapActivity</string>
    <string name="wifi_mode_intent_extra">WIFE_MODE</string>
    <string name="bluetooth_mode_intent_extra">BlueTooth_Mode</string>
    <string name="change_bluetooth_title">BlueTooth</string>
    <string name="change_bluetooth_summary">Don\'t Change</string>

</resources>
