<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_new"
        android:orderInCategory="200"
        android:title="Add New Profile"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_add"/>

    <item
        android:id="@+id/action_ok"
        android:orderInCategory="200"
        app:showAsAction="always"
        android:enabled="true"
        android:icon="@drawable/ic_action_ok"
        android:title="@string/ok_string"/>
    <item
        android:id="@+id/action_cancel"
        android:title="@string/cancel_string"
        android:icon="@drawable/ic_action_cancel"
        app:showAsAction="always"
        />
</menu>
